--- a/templates/base.html
+++ b/templates/base.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <title>Admin Dashboard</title>
+    <title>portal.edu</title>
     <!-- Montserrat Font -->
     <link
         href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300;400;500;600;700;800;900&display=swap"
@@ -40,47 +40,14 @@
         <aside id="sidebar">
             <div class="sidebar-title">
                 <div class="sidebar-brand">
-                    <span class="material-icons-outlined">inventory</span> Inventory
+                    <span class="material-icons-outlined">book</span> PORTAL.EDU
                 </div>
                 <span class="material-icons-outlined" onclick="closeSidebar()">close</span>
             </div>
 
             <ul class="sidebar-list">
-                <li class="sidebar-list-item">
-                    <a href="/">
-                        <span class="material-icons-outlined">dashboard</span> Dashboard
-                    </a>
-                </li>
-                <li class="sidebar-list-item">
-                    <a href="/">
-                        <span class="material-icons-outlined">inventory_2</span> Products
-                    </a>
-                </li>
-                <li class="sidebar-list-item">
-                    <a href="/">
-                        <span class="material-icons-outlined">fact_check</span> Inventory
-                    </a>
-                </li>
-                <li class="sidebar-list-item">
-                    <a href="/">
-                        <span class="material-icons-outlined">add_shopping_cart</span> Purchase Orders
-                    </a>
-                </li>
-                <li class="sidebar-list-item">
-                    <a href="/">
-                        <span class="material-icons-outlined">shopping_cart</span> Sales Orders
-                    </a>
-                </li>
-                <li class="sidebar-list-item">
-                    <a href="/">
-                        <span class="material-icons-outlined">poll</span> Reports
-                    </a>
-                </li>
-                <li class="sidebar-list-item">
-                    <a href="/">
-                        <span class="material-icons-outlined">settings</span> Settings
-                    </a>
-                </li>
+                {% block sidebarlist %}{% endblock %}
+
             </ul>
         </aside>
         <!-- End Sidebar -->
@@ -100,6 +67,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/apexcharts/3.35.3/apexcharts.min.js"></script>
     <!-- Custom JS -->
     <script src="{{ url_for('static', path='js/app.js') }}"></script>
+   
 </body>
 
 </html>
