--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -1,8 +1,8 @@
 {% extends "base.html" %}
 
 {% block sidebarlist %}
-<li class="sidebar-list-item">
-    <a onclick="gotoDashboard('{{session_id}}')">
+<li class="sidebar-list-item" onclick="gotoDashboard('{{session_id}}')">
+    <a>
         <span class="material-icons-outlined">dashboard</span> Dashboard
     </a>
 </li>
@@ -32,8 +32,8 @@
         <span class="material-icons-outlined">poll</span> Reports
     </a>
 </li> -->
-<li class="sidebar-list-item">
-    <a onclick="gotoUsers('{{session_id}}')">
+<li class="sidebar-list-item" onclick="gotoUsers('{{session_id}}')">
+    <a>
         <span class="material-icons-outlined">face</span> Users
     </a>
 </li>
