--- a/templates/login.html
+++ b/templates/login.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="{{ url_for('static', path='css/styles.css') }}">
 </head>
 
-<body id="login-body">
+<body id="login-body" onload="sendMessage('{{message}}')">
     <div id="login-container">
         <center>
             <h2>Login</h2>
@@ -21,6 +21,7 @@
         </center>
         </form>
     </div>
+    <script src="{{ url_for('static', path='js/app.js') }}"></script>
 </body>
 
 </html>
