Renders users data

--- a/templates/base.html
+++ b/templates/base.html
@@ -58,6 +58,7 @@
         <!-- Main -->
         <main class="main-container">
             <div class="main-title">{% block main_title %}{% endblock %}</div>
+            {% block quickbutton %}{% endblock%}
             <div class="main-cards">{% block main_cards %}{% endblock %}</div>
             <div class="charts">{% block charts %}{% endblock %}</div>
         </main>
