--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -182,6 +182,22 @@ body {
     padding: 20px 20px;
 }
 
+.quickbutton {
+
+    padding: 5px 10px;
+    margin-left: 10px;
+    margin-top: 15px;
+    background-color: #3261e4;
+    color: #ffffff;
+    /* Text color */
+    text-decoration: none;
+    border-radius: 5px;
+    border: none;
+    cursor: pointer;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    /* Box shadow */
+}
+
 .main-title {
     display: flex;
     justify-content: space-between;
@@ -197,6 +213,8 @@ body {
     gap: 20px;
     margin: 20px 0;
 }
+
+
 
 .card {
     display: flex;
@@ -270,6 +288,73 @@ body {
     font-weight: 600;
 }
 
+.row {
+    flex: 1;
+    flex-direction: column;
+    justify-content: space-around;
+    width: fit-content;
+    padding: 25px;
+    background-color: #ffffff;
+    box-sizing: border-box;
+    border: 1px solid #d2d2d3;
+    border-radius: 5px;
+    box-shadow: 0 6px 7px -4px rgba(0, 0, 0, 0.2);
+}
+
+.user-card {
+    background-color: #fff;
+    border-radius: 8px;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+    overflow: hidden;
+    margin-left: 10px;
+    margin-top: -10px;
+    width: 500px;
+    position: relative;
+}
+
+table {
+    width: 100%;
+    border-collapse: collapse;
+}
+
+th,
+td {
+    padding: 12px;
+    text-align: left;
+    border-bottom: 1px solid #eee;
+}
+
+th {
+    background-color: #f4f4f4;
+
+}
+
+.actions {
+    position: absolute;
+    top: 0;
+    right: 0;
+    padding: 8px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    background-color: #f4f4f4;
+}
+
+.actions span {
+    cursor: pointer;
+    margin-bottom: 8px;
+}
+
+.edit-icon::before {
+    content: '\270E';
+    /* Unicode for edit icon */
+}
+
+.delete-icon::before {
+    content: '\2716';
+    /* Unicode for delete icon */
+    color: #e74c3c;
+}
 
 /* ---------- SCROLLBARS ---------- */
 
