--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -184,18 +184,19 @@ body {
 
 .quickbutton {
 
-    padding: 5px 10px;
-    margin-left: 10px;
     margin-top: 15px;
     background-color: #3261e4;
-    color: #ffffff;
     /* Text color */
     text-decoration: none;
-    border-radius: 5px;
     border: none;
-    cursor: pointer;
+
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     /* Box shadow */
+
+    color: white;
+    padding: 10px 15px;
+    border-radius: 4px;
+    cursor: pointer;
 }
 
 .main-title {
@@ -306,7 +307,6 @@ body {
     border-radius: 8px;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
     overflow: hidden;
-    margin-left: 10px;
     margin-top: -10px;
     width: 500px;
     position: relative;
@@ -355,6 +355,51 @@ th {
     /* Unicode for delete icon */
     color: #e74c3c;
 }
+
+.form-container {
+    width: 500px;
+    background-color: #fff;
+    padding: 20px;
+    border-radius: 8px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+}
+
+label {
+    display: block;
+    margin-bottom: 8px;
+}
+
+input,
+select {
+    width: 100%;
+    padding: 10px;
+    margin-bottom: 16px;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    box-sizing: border-box;
+}
+
+button {
+    background-color: #3261e4;
+    color: white;
+    padding: 10px 15px;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+}
+
+button:hover {
+    background-color: #45a049;
+}
+
+
+
+
+
+
+
+
+
 
 /* ---------- SCROLLBARS ---------- */
 
