--- a/templates/add_user.html
+++ b/templates/add_user.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-{% block main_title%}<p class="font-weight-bold">USERS</p>{% endblock %}
+{% block main_title%}<p class="font-weight-bold">ADD USER</p>{% endblock %}
 
 {% block sidebarlist %}
 <li class="sidebar-list-item" onclick="gotoDashboard('{{session_id}}')">
@@ -40,36 +40,26 @@
     </a>
 </li>
 {% endblock %}
-{% block quickbutton %} <button onclick="gotoAddUser('{{session_id}}')" class="quickbutton">+ Add User</button>{%
-endblock %}
 
 {% block main_cards %}
+<div class="form-container">
 
-<div class="user-card">
+    <form onsubmit="signUp(event,'{{session_id}}')" method="post">
+        <label for="username">Username:</label>
+        <input type="text" id="username" name="username" placeholder="Enter Username" required>
 
-    <table>
-        <thead>
-            <tr>
-                <th>ID</th>
-                <th>Username</th>
-                <th>Role</th>
-                <th style="text-align: center;">Edit</th>
-                <th style="text-align: center;">Delete</th>
-            </tr>
-        </thead>
-        <tbody>
-            {% for usr in users %}
-            <tr>
-                <td>{{usr.id}}</td>
-                <td>{{usr.username}}</td>
-                <td>{{usr.role.value}}</td>
-                <td style="text-align: center;"><span class="edit-icon"></span></td>
-                <td style="text-align: center;"><span class="delete-icon"></span>
-                </td>
-            </tr>
-            {% endfor %}
-        </tbody>
-    </table>
+        <label for="password">Password:</label>
+        <input type="password" id="password" name="password" placeholder="Enter Password" required>
+
+        <label for="role">Role:</label>
+        <select id="role" name="role">
+            <option value="admin">admin</option>
+            <option value="CI">CI</option>
+            <option value="COO">COO</option>
+            <option value="master">master</option>
+        </select>
+
+        <button type="submit">Add</button>
+    </form>
 </div>
-
 {% endblock %}
