--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -393,9 +393,13 @@ button:hover {
 }
 
 
-
-
-
+.show-button {
+    position: absolute;
+    right: 5px;
+    top: 50%;
+    transform: translateY(-50%);
+    cursor: pointer;
+}
 
 
 
