--- a/templates/users.html
+++ b/templates/users.html
@@ -66,7 +66,8 @@ endblock %}
                 <td style="text-align: center;"><span onclick="editUser('{{usr.id}}','{{session_id}}')"
                         class="edit-icon"></span>
                 </td>
-                <td style="text-align: center;"><span class="delete-icon"></span>
+                <td style="text-align: center;"><span onclick="deleteUser('{{usr.id}}','{{session_id}}')"
+                        class="delete-icon"></span>
                 </td>
             </tr>
             {% endfor %}
