--- a/templates/base.html
+++ b/templates/base.html
@@ -5,7 +5,10 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <title>portal.edu</title>
+
+
     <!-- Montserrat Font -->
+
     <link
         href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300;400;500;600;700;800;900&display=swap"
         rel="stylesheet">
@@ -14,7 +17,12 @@
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons+Outlined" rel="stylesheet">
 
     <!-- Custom CSS -->
+
+
     <link href="{{ url_for('static', path='css/styles.css') }}" rel="stylesheet">
+
+
+
 </head>
 
 <body>
@@ -67,6 +75,8 @@
     </div>
 
     <!-- Scripts -->
+
+    <script src="https://unpkg.com/sweetalert2@11/dist/sweetalert2.all.js"></script>
     <!-- ApexCharts -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/apexcharts/3.35.3/apexcharts.min.js"></script>
     <!-- Custom JS -->
