--- a/templates/login.html
+++ b/templates/login.html
@@ -21,6 +21,7 @@
         </center>
         </form>
     </div>
+    <script src="https://unpkg.com/sweetalert2@11/dist/sweetalert2.all.js"></script>
     <script src="{{ url_for('static', path='js/app.js') }}"></script>
 </body>
 
