Adds Graphs.html and other pages

--- a/templates/add_user.html
+++ b/templates/add_user.html
@@ -1,44 +1,6 @@
 {% extends "base.html" %}
 
-{% block main_title%}<p class="font-weight-bold">ADD USER</p>{% endblock %}
-
-{% block sidebarlist %}
-<li class="sidebar-list-item" onclick="gotoDashboard('{{session_id}}')">
-    <a>
-        <span class="material-icons-outlined">dashboard</span> Dashboard
-    </a>
-</li>
-<!--
-<li class="sidebar-list-item">
-    <a href="/">
-        <span class="material-icons-outlined">inventory_2</span> Products
-    </a>
-</li>
-<li class="sidebar-list-item">
-    <a href="/">
-        <span class="material-icons-outlined">fact_check</span> Inventory
-    </a>
-</li>
-<li class="sidebar-list-item">
-    <a href="/">
-        <span class="material-icons-outlined">add_shopping_cart</span> Purchase Orders
-    </a>
-</li>
-<li class="sidebar-list-item">
-    <a href="/">
-        <span class="material-icons-outlined">shopping_cart</span> Sales Orders
-    </a>
-</li>
-<li class="sidebar-list-item">
-    <a href="/">
-        <span class="material-icons-outlined">poll</span> Reports
-    </a>
-</li> -->
-<li class="sidebar-list-item" onclick="gotoUsers('{{session_id}}')">
-    <a>
-        <span class="material-icons-outlined">face</span> Users
-    </a>
-</li>
+{% block main_title%}ADD USER
 {% endblock %}
 
 {% block main_cards %}
