--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -96,9 +96,12 @@ body {
 /* ---------- HEADER ---------- */
 
 .header {
+    margin: 10px 20px 0px 20px;
     grid-area: header;
     height: 70px;
-    background-color: #ffffff;
+    color: #9799ab;
+    background-color: #21232d;
+    border-radius: 5px;
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -229,6 +232,44 @@ body {
     box-shadow: 0 6px 7px -4px rgba(0, 0, 0, 0.2);
 }
 
+.buttoncard {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    padding: 25px;
+    background-color: #ffffff;
+    box-sizing: border-box;
+    border: 1px solid #d2d2d3;
+    border-radius: 5px;
+    color: white;
+    box-shadow: 0 6px 7px -4px rgba(0, 0, 0.2, 0.7);
+
+    position: relative;
+    width: 300px;
+    height: 200px;
+      
+
+}
+
+.buttoncard::before{
+    content: '';
+    border-radius: 4px;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.28); /* Adjust the alpha (last value) for transparency */
+  }
+
+.bottom-right-text {
+    position: absolute;
+    padding: 10px 30px;
+    bottom: 0;
+    right: 0;
+    text-align: right;
+  }
+
 .card:first-child {
     border-left: 7px solid #246dec;
 }
@@ -266,8 +307,9 @@ body {
 
 .charts {
     display: grid;
-    grid-template-columns: 1fr 1fr;
     gap: 20px;
+    grid-template-columns: repeat(auto-fill, minmax(100%, 1fr));
+    /* Adjust the minmax values as needed */
 }
 
 .charts-card {
@@ -279,6 +321,34 @@ body {
     border: 1px solid #d2d2d3;
     border-radius: 5px;
     box-shadow: 0 6px 7px -4px rgba(0, 0, 0, 0.2);
+}
+
+.pie-card {
+    background-color: #ffffff;
+    margin-bottom: 20px;
+    padding: 15px;
+    /* Adjusted padding to make it smaller */
+    box-sizing: border-box;
+    -webkit-column-break-inside: avoid;
+    border: 1px solid #d2d2d3;
+    border-radius: 5px;
+    box-shadow: 0 6px 7px -4px rgba(0, 0, 0, 0.2);
+    max-width: 450px;
+    /* Added a max-width to limit the width */
+}
+
+.pie-card2 {
+    background-color: #ffffff;
+    margin-bottom: 20px;
+    padding: 15px;
+    /* Adjusted padding to make it smaller */
+    box-sizing: border-box;
+    -webkit-column-break-inside: avoid;
+    border: 1px solid #d2d2d3;
+    border-radius: 5px;
+    box-shadow: 0 6px 7px -4px rgba(0, 0, 0, 0.2);
+    max-width: 450px;
+    /* Added a max-width to limit the width */
 }
 
 .chart-title {
