--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -1,46 +1,8 @@
 {% extends "base.html" %}
 
-{% block sidebarlist %}
-<li class="sidebar-list-item" onclick="gotoDashboard('{{session_id}}')">
-    <a>
-        <span class="material-icons-outlined">dashboard</span> Dashboard
-    </a>
-</li>
-<!--
-<li class="sidebar-list-item">
-    <a href="/">
-        <span class="material-icons-outlined">inventory_2</span> Products
-    </a>
-</li>
-<li class="sidebar-list-item">
-    <a href="/">
-        <span class="material-icons-outlined">fact_check</span> Inventory
-    </a>
-</li>
-<li class="sidebar-list-item">
-    <a href="/">
-        <span class="material-icons-outlined">add_shopping_cart</span> Purchase Orders
-    </a>
-</li>
-<li class="sidebar-list-item">
-    <a href="/">
-        <span class="material-icons-outlined">shopping_cart</span> Sales Orders
-    </a>
-</li>
-<li class="sidebar-list-item">
-    <a href="/">
-        <span class="material-icons-outlined">poll</span> Reports
-    </a>
-</li> -->
-<li class="sidebar-list-item" onclick="gotoUsers('{{session_id}}')">
-    <a>
-        <span class="material-icons-outlined">face</span> Users
-    </a>
-</li>
-{% endblock %}
-
 {% block main_title%}
-<p class="font-weight-bold">DASHBOARD</p>{% endblock %}
+DASHBOARD
+{% endblock %}
 
 {% block main_cards %}
 <div class="card">
