--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -43,7 +43,6 @@
     background-color: #0056b3;
 }
 
-
 body {
     margin: 0;
     padding: 0;
@@ -219,12 +218,20 @@ body {
 }
 
 
-
 .card {
     display: flex;
     flex-direction: column;
     justify-content: space-around;
     padding: 25px;
+    background-color: #ffffff;
+    box-sizing: border-box;
+    border: 1px solid #d2d2d3;
+    border-radius: 5px;
+    box-shadow: 0 6px 7px -4px rgba(0, 0, 0, 0.2);
+}
+
+.simplecard {
+    padding: 10px;
     background-color: #ffffff;
     box-sizing: border-box;
     border: 1px solid #d2d2d3;
@@ -247,11 +254,9 @@ body {
     position: relative;
     width: 300px;
     height: 200px;
-      
-
 }
 
-.buttoncard::before{
+.buttoncard::before {
     content: '';
     border-radius: 4px;
     position: absolute;
@@ -259,8 +264,15 @@ body {
     left: 0;
     width: 100%;
     height: 100%;
-    background: rgba(0, 0, 0, 0.28); /* Adjust the alpha (last value) for transparency */
-  }
+    background: rgba(0, 0, 0, 0.28);
+}
+
+.buttoncard:hover {
+
+    border-width: 2px;
+    border-color: rgb(255, 255, 255);
+}
+
 
 .bottom-right-text {
     position: absolute;
@@ -268,7 +280,7 @@ body {
     bottom: 0;
     right: 0;
     text-align: right;
-  }
+}
 
 .card:first-child {
     border-left: 7px solid #246dec;
