--- a/templates/base.html
+++ b/templates/base.html
@@ -69,6 +69,12 @@
                     </a>
 
                 </li>
+                <li class="sidebar-list-item" onclick="gotoStudents('{{session_id}}')">
+                    <a>
+                        <span class="material-icons-outlined">group</span> Students
+                    </a>
+
+                </li>
                 <li class="sidebar-list-item" onclick="gotoResults('{{session_id}}')">
                     <a>
                         <span class="material-icons-outlined">school</span> Results
