--- a/templates/examination_board.html
+++ b/templates/examination_board.html
@@ -3,9 +3,8 @@
 {% endblock %}
 
 {% block main_cards %}
-<div style="background: url('../static/images/add_marks.png') no-repeat center;background-size: cover;min-height: 10vh;" class="buttoncard">
-        
-        <strong><p class="bottom-right-text">ADD SUBJECT MARKS</p></strong>
-    
+<div onclick="gotoAddMarks('{{session_id}}')"  style="background: url('../static/images/add_marks.png') no-repeat center;background-size: cover;min-height: 10vh;" class="buttoncard">
+        <strong><label class="bottom-right-text">ADD SUBJECT MARKS</label></strong>
 </div>
+
 {% endblock %}
