--- a/templates/form_campus.html
+++ b/templates/form_campus.html
@@ -9,7 +9,7 @@
 
 <div class="form-container">
 
-    <form onsubmit="signUp(event,'{{session_id}}')" method="post">
+    <form onsubmit="addCampus(event,'{{session_id}}')" method="post">
 
         <div class="form-group">
             <div class="combination">
