--- a/templates/edit_subject.html
+++ b/templates/edit_subject.html
@@ -1,25 +1,24 @@
-{% extends "base.html" %}
-
-{% block main_title%}ADD SUBJECT
+{% extends 'base.html' %}
+{% block main_title%} EDIT SUBJECTS
 {% endblock %}
 
 {% block content %}
 <div class="form-container">
-    <form onsubmit="addSubject(event,'{{session_id}}')" method="post">
+    <form onsubmit="updateSubject(event,'{{session_id}}','{{subject_to_edit.subject_id}}')" method="post">
 
         <div class="form-group">
             <div class="combination"> <label for="subject">Subject Name:</label>
-                <input type="text" class="input-box" id="subject" name="subject" placeholder="e.g Physics II, Math I"
-                    required>
+                <input type="text" class="input-box" id="subject" name="subject"
+                    value="{{subject_to_edit.subject_name}}" required>
             </div>
             <div class="combination"> <label for="lecture_units">Total Lecture Units:</label>
                 <input type="number" class="input-box" id="lecture_units" name="lecture_units" step="1"
-                    placeholder="Lectures Units" required>
+                    value="{{subject_to_edit.total_lecture_units}}" required>
             </div>
         </div>
 
         <div class="form-group">
-            <div class="combination"><button type="submit">Add</button></div>
+            <div class="combination"><button type="submit">Update</button></div>
         </div>
     </form>
 </div>
