--- a/templates/subjects.html
+++ b/templates/subjects.html
@@ -8,10 +8,16 @@ endblock %}
 
 {% block main_cards %}
 <div style="display: flex;flex-direction: row;flex-wrap: wrap;min-width: 144vh;">
-{% for subject in subjects %}
-<div  style="background: url('../static/images/add_marks.png') no-repeat center;background-size: cover;min-height: 10vh;" class="buttoncard">
-        <strong><label class="bottom-right-text">{{subject.subject_name}}</label></strong>
-</div>
-{% endfor %}
+        {% for subject in subjects %}
+
+        <div style="background: url('../static/images/add_marks.png') no-repeat center;background-size: cover;min-height: 10vh;"
+                class="buttoncard">
+                <strong><label class="bottom-right-text">{{subject.subject_name}}<span
+                                        onclick="gotoEditSubject('{{subject.subject_id}}','{{session_id}}')"
+                                        style="position: absolute;bottom: 160px;margin-left: 0;width: 10px;margin-left: -10px;"
+                                        class="material-icons-outlined">edit</span></label></strong>
+        </div>
+
+        {% endfor %}
 </div>
 {% endblock %}
