Adds Admissions Menu and Adding new student page

--- a/templates/add_user.html
+++ b/templates/add_user.html
@@ -8,7 +8,8 @@
     <form onsubmit="signUp(event,'{{session_id}}')" method="post">
 
         <div class="form-group">
-            <div class="combination"> <label for="username">Username:</label>
+            <div class="combination">
+                <label for="username">Username:</label>
                 <input type="text" class="input-box" id="username" name="username" placeholder="Enter Username"
                     required>
             </div>
