--- a/templates/base.html
+++ b/templates/base.html
@@ -90,6 +90,11 @@
                         <span class="material-icons-outlined">apartment</span> Campuses
                     </a>
                 </li>
+                <li class="sidebar-list-item" onclick="gotoAdmissions('{{session_id}}')">
+                    <a>
+                        <span class="material-icons-outlined"> person_add </span> Admissions
+                    </a>
+                </li>
                 <!-- {% endblock %} -->
                 <li onclick="gotoLogin('{{session_id}}')" class="sidebar-list-item">
                     <a><span class="material-icons-outlined">logout</span>
