Adds more graphs

--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -5,7 +5,7 @@ DASHBOARD
 {% endblock %}
 
 {% block main_cards %}
-<div class="card">
+<!-- <div class="card">
     <div class="card-inner">
         <p class="text-primary">PRODUCTS</p>
         <span class="material-icons-outlined text-blue">inventory_2</span>
@@ -35,17 +35,5 @@ DASHBOARD
         <span class="material-icons-outlined text-red">notification_important</span>
     </div>
     <span class="text-primary font-weight-bold">56</span>
-</div>
-{% endblock %}
-
-{% block charts %}
-<div class="charts-card">
-    <p class="chart-title">Top 5 Products</p>
-    <div id="bar-chart"></div>
-</div>
-
-<div class="charts-card">
-    <p class="chart-title">Purchase and Sales Orders</p>
-    <div id="area-chart"></div>
-</div>
+</div> -->
 {% endblock %}
