--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -326,9 +326,10 @@ body {
     /* Adjust the minmax values as needed */
 }
 
-.charts-card {
+.bar-card {
     background-color: #ffffff;
     margin-bottom: 20px;
+    margin-top: -30px;
     padding: 25px;
     box-sizing: border-box;
     -webkit-column-break-inside: avoid;
@@ -337,32 +338,39 @@ body {
     box-shadow: 0 6px 7px -4px rgba(0, 0, 0, 0.2);
 }
 
+.radar-card {
+    background-color: #ffffff;
+    margin-bottom: 20px;
+    padding: 15px;
+    box-sizing: border-box;
+    -webkit-column-break-inside: avoid;
+    border: 1px solid #d2d2d3;
+    border-radius: 5px;
+    box-shadow: 0 6px 7px -4px rgba(0, 0, 0, 0.2);
+    max-width: 450px;
+
+}
+
 .pie-card {
     background-color: #ffffff;
     margin-bottom: 20px;
     padding: 15px;
-    /* Adjusted padding to make it smaller */
     box-sizing: border-box;
     -webkit-column-break-inside: avoid;
     border: 1px solid #d2d2d3;
     border-radius: 5px;
     box-shadow: 0 6px 7px -4px rgba(0, 0, 0, 0.2);
-    max-width: 450px;
-    /* Added a max-width to limit the width */
+    max-width: 550px;
 }
 
-.pie-card2 {
+.cloudcard {
     background-color: #ffffff;
-    margin-bottom: 20px;
-    padding: 15px;
-    /* Adjusted padding to make it smaller */
     box-sizing: border-box;
     -webkit-column-break-inside: avoid;
-    border: 1px solid #d2d2d3;
+    border: 1px solid #c9c9c9;
     border-radius: 5px;
-    box-shadow: 0 6px 7px -4px rgba(0, 0, 0, 0.2);
-    max-width: 450px;
-    /* Added a max-width to limit the width */
+    box-shadow: 0 6px 7px -4px rgba(0, 0, 0, 0.2) !important;
+    width: 622px;
 }
 
 .chart-title {
