Adds requirements.txt

--- a/templates/users.html
+++ b/templates/users.html
@@ -2,7 +2,9 @@
 
 {% block main_title%}USERS{% endblock %}
 
-{% block quickbutton %} <button onclick="gotoAddUser('{{session_id}}')" class="quickbutton">+ Add User</button>{%
+{% block quickbutton %} 
+<button onclick="gotoAddUser('{{session_id}}')" class="quickbutton">+ Add User</button>
+{%
 endblock %}
 
 {% block main_cards %}
