--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -347,7 +347,8 @@ body {
     border: 1px solid #d2d2d3;
     border-radius: 5px;
     box-shadow: 0 6px 7px -4px rgba(0, 0, 0, 0.2);
-    max-width: 450px;
+    width: 28%;
+    margin-left: 1%;
 
 }
 
@@ -360,25 +361,35 @@ body {
     border: 1px solid #d2d2d3;
     border-radius: 5px;
     box-shadow: 0 6px 7px -4px rgba(0, 0, 0, 0.2);
-    max-width: 550px;
+    width: 28%;
 }
 
 .cloudcard {
     background-color: #ffffff;
     box-sizing: border-box;
+    margin-bottom: 20px;
     -webkit-column-break-inside: avoid;
     border: 1px solid #c9c9c9;
     border-radius: 5px;
     box-shadow: 0 6px 7px -4px rgba(0, 0, 0, 0.2) !important;
-    width: 622px;
+    width: 44%;
+    margin-left: 1%;
+    
 }
-
+.hh
+{
+    display: flex ;
+}
 .chart-title {
     display: flex;
     align-items: center;
     justify-content: center;
     font-size: 22px;
     font-weight: 600;
+}
+.ff
+{
+    padding-top: 10%;
 }
 
 .row {
