--- a/templates/results.html
+++ b/templates/results.html
@@ -9,20 +9,26 @@
     <div id="bar-chart"></div>
 </div>
 
+<div class="hh">
+
 <div class="pie-card">
-    <p class="chart-title">Grade Pie</p>
+    <p class="chart-title" style="paddin">Grade Pie</p>
+    <div class="ff">
     <div id="pie-chart"></div>
+</div>
 </div>
 
 <div class="cloudcard">
     <p class="chart-title">Best Performance</p>
-    <div style="height: 280px;width: 580px;padding: 20px;" id="chartdiv"></div>
+    <div style="height: 280px;width: 580px;padding: 0.7%;" id="chartdiv"></div>
 </div>
+
 
 <div class="radar-card">
     <p class="chart-title">Radar</p>
     <canvas id="canvas">
     </canvas>
+</div>
 </div>
 
 <div class="bar-card">
