--- a/templates/subjects.html
+++ b/templates/subjects.html
@@ -10,7 +10,7 @@ endblock %}
 <div style="display: flex;flex-direction: row;flex-wrap: wrap;min-width: 144vh;">
         {% for subject in subjects %}
 
-        <div style="background: url('../static/images/add_marks.png') no-repeat center;background-size: cover;min-height: 10vh;"
+        <div onclick="gotoSubjectDetails('{{session_id}}', '{{subject.subject_id}}')" style="background: url('../static/images/add_marks.png') no-repeat center;background-size: cover;min-height: 10vh;"
                 class="buttoncard">
                 <strong><label class="bottom-right-text">{{subject.subject_name}}<span
                                         onclick="gotoEditSubject('{{subject.subject_id}}','{{session_id}}')"
